Fixed issues with dynamic image ratio square images distorting

--- a/dynamic-images-by-ratio/css/style.css
+++ b/dynamic-images-by-ratio/css/style.css
@@ -20,3 +20,21 @@ p {
 	margin-bottom: 15px;
 	background: #fefefe;
 }
+/*-- Styles for Dynamic Images --*/
+.image-container {
+	width: 100%;
+	display: relative; /* Make sure image containers are relative to accommodate absolutely positioned child img elements */
+	margin: 0 auto 15px;
+	background: #f7f7f7;
+}
+.image-container img {
+	width: 100%; /* Make sure to set your image width */
+}
+
+/*-- Additional image styles --*/
+.round .image-container {
+	max-width: 600px;
+	-webkit-border-radius: 100%;
+	-moz-border-radius: 100%;
+	border-radius: 100%;
+}
